[gd_scene load_steps=5 format=3 uid="uid://dygotfdixd1xq"]

[ext_resource type="Script" path="res://Scenes/Pointers/Pointer.gd" id="1_me7md"]
[ext_resource type="Texture2D" uid="uid://chngjva5d5ev0" path="res://Scenes/Pointers/HexagonPointerStar.png" id="2_5v72p"]
[ext_resource type="Texture2D" uid="uid://bgbaksg53x4hp" path="res://Scenes/Pointers/HexagonPointerPurple.png" id="3_67hxu"]
[ext_resource type="Texture2D" uid="uid://b5etx8664ax0i" path="res://Scenes/Pointers/HexagonPointerBlue.png" id="4_os07d"]

[node name="CustomPointer" type="Node2D" groups=["pointerGroup"]]
script = ExtResource("1_me7md")

[node name="InGame" type="Node2D" parent="."]
scale = Vector2(1.5, 1.5)

[node name="Center" type="Sprite2D" parent="InGame"]
texture_filter = 1
texture = ExtResource("2_5v72p")

[node name="Hexagon1" type="Sprite2D" parent="InGame"]
texture_filter = 1
texture = ExtResource("3_67hxu")

[node name="Hexagon2" type="Sprite2D" parent="InGame"]
texture_filter = 1
texture = ExtResource("4_os07d")
